workshop03/bggapp-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysqlapp
  template: 
      metadata:
        labels:
          app: mysqlapp
      spec:
        containers:
        - name: mysqlapp-container
          image: chukmunnlee/bgg-app:nov-2025
          ports:
          - containerPort: 5000

              


---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: default
  labels:
    app: bggapp
spec:
  type: LoadBalancer
  selector:
    app: mysqlapp    
  ports:
  - port: 5000
    targetPort: 5000
