workshop03/bggdb-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template: 
      metadata:
        labels:
          app: mysql
      spec:
        volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
        containers:
        - name: mysql-container
          image: chukmunnlee/bgg-database:nov-2025
          ports:
          - containerPort: 3306
          volumeMounts:
          - name: data-vol
            mountPath: /var/lib/mysql
              
              


---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  namespace: default
  labels:
    app: bggdb
spec:
  type: ClusterIP
  selector:
    app: mysql    
  ports:
  - port: 3306
    targetPort: 3306
