workshop03/bggapp-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggapp-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bgg-146.190.195.7.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bggapp-svc
            port:
              number: 5000
